# timelapse-colorizer

./: .eslintrc  .gitignore  .prettierrc  404.html  CONTRIBUTING.md  DATA_FORMAT.md  README.md  env.d.ts  index.html  package-lock.json  package.json  test_output.txt  tsconfig.json  vite.config.js  vitest.config.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
__mocks__/: zustand.ts
assets/: BannerVideo--5qrSutH.js  BannerVideo--a_MfxWh.js  BannerVideo--ykCfy3J.js  BannerVideo-04170ee3.js  BannerVideo-0a451537.js  BannerVideo-0cad5887.js  BannerVideo-0d8e6431.js  BannerVideo-0f1305ae.js  BannerVideo-0f54ab74.js  BannerVideo-10e6d9a2.js  BannerVideo-161e5eb8.js  BannerVideo-192f56f4.js  BannerVideo-1a754210.js  BannerVideo-1dpn-Imv.js  BannerVideo-1eb6457d.js  BannerVideo-1k2XMLwG.js  BannerVideo-212a59d9.js  BannerVideo-22e5882f.js  BannerVideo-24afd9f5.js  BannerVideo-24d69768.js  BannerVideo-26c31db3.js  BannerVideo-26ee2c98.js  BannerVideo-27deb0d7.js  BannerVideo-29844376.js  BannerVideo-2Y920yl0.js  BannerVideo-3-q97TOM.js  BannerVideo-30cb2756.js  BannerVideo-354e774e.js  BannerVideo-3b00549d.js  BannerVideo-3d56e9c8.js  BannerVideo-3e52a9fb.js  BannerVideo-3f1f3f1e.js  BannerVideo-43e86c78.js  BannerVideo-449b34a5.js  BannerVideo-44fad158.js  BannerVideo-47a3e0a6.js  BannerVideo-48e387b0.js  BannerVideo-4a63d245.js  BannerVideo-4aebb3c9.js  BannerVideo-4c12a8e2.js  (+493 more)
config/: vite.internal-build.config.js
docs/: FAQ.md
documentation/: DATA_FORMAT.md  STARTUP_GUIDE.md
main/: index.html
scripts/: DATA_FORMAT.md  generate_test_data.py  pyproject.toml
scripts/timelapse-colorizer-data/: convert_emt_migration_data.py  convert_emt_nuclear_data.py  convert_nucmorph_data.py  data_writer_utils.py  generate_data.py  generate_data_2.py  generate_test_data.py
src/: App.module.css  App.tsx  Viewer.module.css  Viewer.tsx  constants.tsx  main.ts  main.tsx  styles.css  vars.module.css
tests/: CanvasRecorder.test.tsx  Collection.test.ts  ColorRampDropdown.test.tsx  ColorRampSelector.test.tsx  DataCache.test.ts  Dataset.test.ts  Export.test.tsx  ExportButton.test.tsx  FrameCache.test.ts  SpinBox.test.tsx  colors.test.ts  constants.test.ts  correlation.test.ts  data_load_utils.test.ts  data_utils.test.ts  formatting.test.ts  (+9 more)
(+9685 files in other folders)
